[package]
name = "bup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
anyhow = "*"
shellexpand = "*"
url = "*"
libc = "*"
aes-gcm = "*"
qr2term = "*"
num = "*"
lazy_static = "*"
hex = "*"
rand = "*"
reqwest = { version = "*", features = ["blocking"] }
sha2 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

